--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,8 @@ address {
 .dark-bg .link:focus,
 .current-page {
   color: var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo {
@@ -132,12 +134,15 @@ address {
 
 .btn:hover,
 .btn:focus {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(33, 150, 243, 0.75);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .btn:active {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(33, 150, 243, 0.5);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -177,32 +182,24 @@ address {
   display: inline-flex;
 }
 
+.header-menu-item {
+  position: relative;
+}
+
 .header-menu-item:not(:last-child) {
   margin-right: 50px;
 }
 
-.current-page {
-  position: relative;
-}
-
-.sub-line {
+.current-page::after {
+  content: '';
   position: absolute;
   left: 0;
-  top: 46.85px;
+  top: 50.2px;
   width: 100%;
   height: 3px;
   border-radius: 2px;
   background-color: var(--accent-color);
 }
-
-/* .header-menu .header-link:hover:after,
-.current-page:after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 3px;
-  background-color: var(--accent-color);
-} */
 
 .header-contacts {
   display: flex;
@@ -232,6 +229,8 @@ address {
 .header-link:hover .header-icons-phone,
 .header-link:focus .header-icons-phone {
   fill: var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-hero {
@@ -433,6 +432,8 @@ address {
 
 .social-icons-link:hover {
   background-color: var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icons-svg {
@@ -444,6 +445,8 @@ address {
 .social-icons-link:hover .social-icons-svg,
 .social-icons-link:focus .social-icons-svg {
   fill: var(--white);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers .section-title {
@@ -472,6 +475,8 @@ address {
 .customers-link:hover {
   border: 1px solid var(--accent-color);
   border-radius: 4px;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icons-svg {
@@ -481,6 +486,8 @@ address {
 .customers-link:hover .customers-icons-svg,
 .customers-link:focus .customers-icons-svg {
   fill: var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icons-svg1 {
@@ -612,6 +619,8 @@ address {
 .portfolio-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .portfolio-photo {
@@ -641,6 +650,8 @@ address {
 
 .portfolio-item:hover .portfolio-info {
   transform: translateX(0);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .dark-bg {
